<resources>
    <string name="tv_change_text">English</string>
    <string name="return_">Return %s</string>
    <string name="selectMode0">Japanese - Vietnamese Dictionary is chosen</string>
    <string name="selectMode1">Vietnamese - Japanese Dictionary is chosen</string>
    <string name="selectMode2">Kanji Dictionary is chosen</string>
    <string name="strLoading">Loading &#8230;</string>
    <string name="strRestore">Click to restore JSDict</string>
    <string name="strSetting">Setting</string>
    <string name="strSearch">Search</string>
    <string name="strLanguage">English Language is chosen</string>
    <string name="strTranslating">Translating &#8230;</string>
    <string name="strBing">Bing Dictionary is chosen</string>
    <string name="strJSDict">JSDict Dictionary is chosen</string>
    <string name="clickBack">Please click BACK again to exit</string>
    <string name="error_no_words">No meaning exists</string>
    <string name="show_romaji">Show romaji</string>
    <string name="show_kana">Show kana</string>
    <string name="no_radicals_selected">No radicals selected</string>
    <string name="configuration">Configuration</string>
    <string name="always_availableJSDict">JSDict</string>
    <string name="always_available_summary">JSDict Dictionary</string>
    <string name="kanjiEntryText">Kanji (tip: to select and/or copy-paste just long-click the edit box. To search for a part of a word just select it and press search)</string>
    <string name="entryReadingText">Reading (when searching, romaji is automatically translated to both hiragana and katakana)</string>
    <string name="nothing_to_search_for">Nothing to search for</string>
    <string name="no_results">No results</string>
    <string name="searchFailed">Failed to perform search: %s</string>
    <string name="data_files_removed">Data files were removed</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sdcardCleanup">SD-Card cleanup</string>
    <string name="sdcardCleanupSummary">Deletes all JSDict-downloaded files, including dictionaries</string>
    <string name="warning_less_than_x_mb_free" formatted="false"> Warning: there is less than %d kb of free space on the sd card (%d kb). The download will most probably fail.</string>
    <string name="dictionary_missing_download">The %s dictionary is missing. Do you wish to download it now?</string>
    <string name="downloading_dictionary">Downloading %s</string>
    <string name="interrupted">Interrupted</string>
    <string name="error">Error</string>
    <string name="info">Information</string>
    <string name="failed_to_download_dictionary">Failed to download %s: </string>
    <string name="connecting">Connecting</string>
    <string name="app_name">JSDict</string>
    <string name="searchResults">JSDict: Search Results</string>
    <string name="deleteDictionaryFiles">Dictionary data files are currently taking up to %d kb. Do you wish to clean the files?</string>
    <string name="searchResultsFor">Search results for %s</string>
    <string name="about">http://code.google.com/p/JSDict\n\nCopyright (C) 2009 Martin Vyšný\nGUI design: Mitchell Liam\n\nLicensed under GPL3: http://www.gnu.org/licenses/gpl-3.0.html\n\nWhat\'s new: http://baka.sk/JSDict/changes-report.html\n\nReferences:\nEDict: http://www.csse.monash.edu.au/~jwb/edict.html\nLucene: http://lucene.apache.org/java/docs/\nKanji recognizer (C) by Todd David Rudick, http://www.cs.arizona.edu/projects/japan/JavaDict/\nSKIP code system (C) by Jack Halpern\nStroke order diagrams (C) Jim Rose, http://www.kanjicafe.com\nVerb inflection examples (C) by Tim R. Matheson, http://www.timwerx.net/language/jpverbs/</string>
    <string name="aboutCaption">About</string>
    <string name="exactMatch">Exact match</string>
    <string name="enterKanaRomajiEnglish">Enter kana/romaji/english</string>
    <string name="search">Search</string>
    <string name="searching">Searching</string>
    <string name="entryDetail">Entry detail</string>
    <string name="copy">Copy</string>
    <string name="copyToClipboard">Copy to clipboard</string>
    <string name="copied">Copied "%s" to the clipboard</string>
    <string name="kanaTable">Kana Table</string>
    <string name="showkanaTable">Show kana table</string>
    <string name="romanization">Romanization</string>
    <string name="romanizationSummary">Which romanization to use, both for romaji input and for display</string>
    <string name="analyze">Analyze</string>
    <string name="kanjiAnalysisOf">Kanji analysis of:</string>
    <string name="kanjiRadicalLookup">Radical Lookup</string>
    <string name="kanjiDrawLookup">Kanjipad</string>
    <string name="kanjiLookup">Kanji Lookup</string>
    <string name="radicals">Radicals</string>
    <string name="clear">Clear</string>
    <string name="usePersonal">Personal Dictionary</string>
    <string name="usePersonal_summary">Personal Dictionary</string>
    <string name="instantPopup">Instant Popup</string>
    <string name="strokes">Strokes: %d</string>
    <string name="plusMinusBetween0And2">The +- number must be 0..2</string>
    <string name="skipLookup">Skip Lookup</string>
    <string name="skipLookupHint">Please select the visual style of the kanji. Look at the kanji in question and decide if it can visually be divided as (choose the first that applies):</string>
    <string name="skip11">1 八</string>
    <string name="skip11explanation">into <b>left</b> and right sides, such as: 行 引 相 時 八 噛</string>
    <string name="skip12">2 二</string>
    <string name="skip12explanation">into <b>top</b> and bottom parts, such as: 学 見 京 字 分 二 春</string>
    <string name="skip13">3 厂</string>
    <string name="skip13explanation">into an <b>enclosing</b> structure and an internal structure, such as: 気 週 間 広 国 月 通</string>
    <string name="skip14">4 西</string>
    <string name="skip14explanation">none of the above, such as: 下 西 士 自 中 事 火 女</string>
    <string name="skip41">1 下</string>
    <string name="skip41explanation">has a <b>horizontal line at the top</b> (e.g. 下, 西)</string>
    <string name="skip42">2 士</string>
    <string name="skip42explanation">has a <b>horizontal line at the bottom</b> (e.g. 士, 自).</string>
    <string name="skip43">3 中</string>
    <string name="skip43explanation">has a <b>vertical line through</b> (e.g. 中, 事)</string>
    <string name="skip44">4 女</string>
    <string name="skip44explanation">none of the above (e.g. 火, 女)</string>
    <string name="skip1tutorial">Count the strokes in the leftmost part and then the number of strokes left in the right part. For example, in kanji 引, leftmost part has three strokes, and the right half has one.</string>
    <string name="skip2tutorial">Count the strokes in the topmost part and then the number of strokes left in the lower part. For example, in kanji 春, topmost part has five strokes, and the lower half has four.</string>
    <string name="skip3tutorial">Count the strokes in the enclosing part and then the number of strokes left in the internal part. For example, in kanji 通, enclosing part has three strokes, and the internal part has seven.</string>
    <string name="skip1first">Number of strokes in the leftmost part:</string>
    <string name="skip1second">Number of strokes in the right part:</string>
    <string name="skip2first">Number of strokes in the topmost part:</string>
    <string name="skip2second">Number of strokes in the lower part:</string>
    <string name="skip3first">Number of strokes in the enclosing part:</string>
    <string name="skip3second">Number of strokes in the internal part:</string>
    <string name="skip4">Please count all the strokes in the character, and then choose the first from the options listed below:</string>
    <string name="numberOfStrokes">Number of strokes:</string>
    <string name="edictDictionary">Edict dictionary</string>
    <string name="edictDictionarySummary">Use given dictionary for search and translation</string>
    <string name="analyzeWords">Analyze as words</string>
    <string name="analyzeCharacters">Analyze as characters</string>
    <string name="translate">Translate</string>
    <string name="jpTranslate">Translate japanese text. Copy-paste the text here (e.g. from a browser). Simple, stupid and slow :-)</string>
    <string name="analyzing">Analyzing</string>
    <string name="downloadDictionaries">Download dictionary</string>
    <string name="downloadDictionariesSummary">Download additional dictionaries</string>
    <string name="downloadingDictionaryList">Downloading list of dictionaries</string>
    <string name="availableDicts">Available dictionaries (click on the name to install)</string>
    <string name="notepad">Notepad</string>
    <string name="delete">Delete</string>
    <string name="deleteAll">Delete all</string>
    <string name="addToNotepad">Add to notepad</string>
    <string name="searchingInDictionary">Searching in the %s dictionary</string>
    <string name="deinflectVerbs">Deinflect verbs</string>
    <string name="preference_modeDict">DICTIONARY</string>
    <string name="preference_Language">LANGUAGES</string>
    <string name="undo">Undo</string>
    <string name="checkForLanguage">Language</string>
    <string name="checkForUpdatesLanguage">English</string>
    <string name="done">Done</string>
    <string name="menu">Menu</string>
    <string name="menuContent">The menu of the application can be open in two ways\n
	1.Tap the Menu icon (in the top left corner of the application)\n
	2.Swipe from the left edge of the application.</string>
    <string name="searchMode"> Search Mode</string>
    <string name="searchModeContent"> User can search by many ways</string>
    <string name="kanjiModeContent"> Search by drawing Kanji Mode</string>
    <string name="RadicalContent"> Search by Radical Mode</string>
    <string name="KeyboardContent"> Search by typing word Mode</string>
    <string name="VoiceContent"> Search by voice Mode</string>
    <string name="OnlineContent"> Search online Mode</string>
    <string name="radicalSearch"> Radical Search</string>
    <string name="radicalContent">"Sometimes when you search by kanji radical or kanji parts, there is too many results to see. You can then limit the results by searching kanjis with given stroke count only, by counting strokes in the target kanji character and setting the count in the stroke count field. However, a beginner may count strokes incorrectly and you may receive no results. Therefore, you can make some room for incorrect counts by specifying Stroke Count +- to 1 or 2."  \n For example: </string>
    <string name="ExampleContent"> Here is "志". You can then search for 7 strokes +- 1, which will find kanjis with 6, 7 or 8 strokes. You must choose radical.\nIn this case, I will choose "士" and "心" radicals.\nAfter that, I will enter 7 +-1 in stroke counts.</string>
    <string name="step1">		Step 1: </string>
    <string name="step2">		Step 2: </string>
    <string name="step3">		Step 3: </string>
    <string name="instantLookup">Instant Lookup</string>
    <string name="instantContent">While you are reading e-book, or browsing web, 
	    you may encounter some words you don\'t know or haven\'t learn, you can use JSDict Instant Lookup through Bing Translation to search. 
	    Go to Menu and turn on the Instant Lookup, a pop-up toggle button will appear and turn-off by default. 
	    When you want to search for words, tap the toggle to turn on and the pop-up window will show up, 
	    you can select the words or text you want and paste it to the text field to begin searching 
	    ( Require Internet connection.)
	    	\nYou also can search by our dictionary\'s data in the pop-up window by tapping the + symbol on the top left of the pop-up window to change translate machine. 
	    	But it will limit the input by word alone and cannot search sentences. \n\n\n\n\n </string>
</resources>